リンクを追加・パスを修正

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>Contact</h2>
         <div class="discord-button">
           <a href="https://dsc.gg/otohome" target="_blank">
-            <img src="img/svg/discord-w.svg" alt="Discord" title="Discord" />
+            <img src="img/svg/discord_w.svg" alt="Discord" title="Discord" />
             <p>Join Discord Server</p>
           </a>
         </div>
@@ -106,7 +106,7 @@
 
     <div class="social-links">
       <a href="https://dsc.gg/otohome" target="_blank">
-        <img src="img/svg/discord-w.svg" alt="Discord" title="Discord" />
+        <img src="img/svg/discord_w.svg" alt="Discord" title="Discord" />
       </a>
       <a href="https://twitter.com/rin_pineapple" target="_blank">
         <img src="img/svg/twiiter_w.svg" alt="Twitter" title="Twitter" />
@@ -116,6 +116,9 @@
       </a>
       <a href="https://youtube.com/@rin_pineapple" target="_blank">
         <img src="img/svg/youtube_w.svg" alt="YouTube" title="YouTube" />
+      </a>
+      <a href="https://projectarchive.cloud/" target="_blank">
+        <img src="img/svg/link_w.svg" alt="Project Archive" title="Project Archive" />
       </a>
     </div>   
 
