リンクを追加

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
       <a href="https://youtube.com/@rin_pineapple" target="_blank">
         <img src="img/svg/youtube_w.svg" alt="YouTube" title="YouTube" />
       </a>
+      <a href="https://otoneko.jp/" target="_blank">
+        <img src="img/svg/link_w.svg" alt="otoneko." title="otoneko." />
+      </a>
       <a href="https://projectarchive.cloud/" target="_blank">
         <img src="img/svg/link_w.svg" alt="Project Archive" title="Project Archive" />
       </a>
