ページの更新

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <p>
                   <span>使用言語: JavaScript, TypeScript, Python</span>
                   <span>コメント: Discord BotやWebページ作成、ツール開発など承ります。</span>
+                  <span>自己紹介ページ: <a href="https://www.otoneko.cat/" target="_blank">OTONEKO.CAT</a></span>
                 </p>
               </div>
             </div>
@@ -117,13 +118,13 @@
       <a href="https://youtube.com/@rin_pineapple" target="_blank">
         <img src="img/svg/youtube_w.svg" alt="YouTube" title="YouTube" />
       </a>
-      <a href="https://otoneko.jp/" target="_blank">
+      <a href="https://github.com/otoneko1102" target="_blank">
+        <img src="img/svg/github_w.svg" alt="GitHub" title="Github" />
+      </a>
+      <a href="https://www.otoneko.cat/" target="_blank">
         <img src="img/svg/link_w.svg" alt="otoneko." title="otoneko." />
       </a>
-      <a href="https://projectarchive.cloud/" target="_blank">
-        <img src="img/svg/link_w.svg" alt="Project Archive" title="Project Archive" />
-      </a>
-    </div>   
+    </div>
 
     <footer>
       <p>&copy; 2024 otoneko. All rights reserved. | Oto Home</p>
