.htaccessを追加・サイトマップを追加・スタイルの修正

--- a/404.html
+++ b/404.html
@@ -32,11 +32,11 @@
     <div class="menu" id="menu">
       <ul>
         <br><br>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#developers">Developers</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/#home">Home</a></li>
+        <li><a href="/#about">About</a></li>
+        <li><a href="/#services">Services</a></li>
+        <li><a href="/#developers">Developers</a></li>
+        <li><a href="/#contact">Contact</a></li>
       </ul>
     </div>
     <button class="menu-toggle" id="menuToggle">&equiv;</button>
@@ -44,65 +44,8 @@
     <div class="main-content">
       <section id="home">
         <img src="img/logo.png" alt="Logo">
-      </section>
 
-      <div class="section-border"></div>
-
-      <section id="about">
-        <h2>About</h2>
-        <p>
-          Oto Homeでは、<strong>「すべての人に便利さを」</strong>をスローガンに開発を行っています。
-        </p>
-      </section>
-
-      <div class="section-border"></div>
-
-      <section id="services">
-        <h2>Services</h2>
-        <p>
-          Oto Homeでは、以下のようなサービスを提供しています。
-        </p>
-        <ul>
-          <li>Discord Bot作成</li>
-          <li>Webページ作成</li>
-        </ul>
-        <p>
-          その他の内容につきましても可能な場合がありますので、お問い合わせください。
-        </p>
-      </section>
-
-      <div class="section-border"></div>
-
-      <section id="developers">
-        <h2>Developers</h2>
-        <p>
-          以下はOto Home所属の開発者です。
-          <div class="members">
-            <div class="member">
-              <h3>音猫｡</h3>
-              <div class="member-description">
-                <img src="img/developers/otoneko.png" alt="otoneko." title="otoneko." />
-                <p>
-                  <span>使用言語: JavaScript, TypeScript, Python</span>
-                  <span>コメント: Discord BotやWebページ作成、ツール開発など承ります。</span>
-                  <span>自己紹介ページ: <a href="https://www.otoneko.cat/" target="_blank">OTONEKO.CAT</a></span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </p>
-      </section>
-
-      <div class="section-border"></div>
-
-      <section id="contact">
-        <h2>Contact</h2>
-        <div class="discord-button">
-          <a href="https://dsc.gg/otohome" target="_blank">
-            <img src="img/svg/discord_w.svg" alt="Discord" title="Discord" />
-            <p>Join Discord Server</p>
-          </a>
-        </div>
+        <p class="notfound"><strong>404</strong> - Are you lost? Go back <a href="/">home</a>.</p>
       </section>
 
       <div class="section-border"></div>
