--- a/redirect.html
+++ b/redirect.html
@@ -2,11 +2,31 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <link rel="alternate" hreflang="ja" href="https://www.otoho.me/">
     <title>Redirecting...</title>
     <link rel="stylesheet" href="style.css">
 
+    <!-- Meta Description -->
+    <meta name="description" content="Convenience for everyone.">
+    <meta name="keywords" content="oto home,otohome,音猫,otoneko,rin_pineapple,λ_sorarin,profile,docs,bio,discord,twitter,youtube">
+    <meta name="theme-color" content="#cfcfcf">
+
+    <!-- Open Graph (OG) Tags -->
+    <meta property="og:title" content="Redirecting...">
+    <meta property="og:description" content="Convenience for everyone.">
+    <meta property="og:image" content="https://otoho.me/img/logo.png">
+    <meta property="og:url" content="https://otoho.me/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Redirecting...">
+    <meta name="twitter:description" content="Convenience for everyone.">
+    <meta name="twitter:image" content="https://otoho.me/img/logo.png">
+    <meta name="twitter:site" content="@rin_pineapple">
+
     <!-- Viewport for Responsiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1 id="redirecting-msg"></h1>
