軽微な修正

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 
     <!-- Meta Description -->
     <meta name="description" content="Convenience for everyone.">
-    <meta name="keywords" content="oto home,otohome,音猫,otoneko,rin_pineapple,λ_sorarin,profile,docs,bio,discord,twitter,youtube">
+    <meta name="keywords" content="oto home,otohome,音猫,otoneko,rin_pineapple,λ_sorarin,profile,docs,bio,discord,twitter,instagram,youtube,github">
     <meta name="theme-color" content="#cfcfcf">
 
     <!-- Open Graph (OG) Tags -->
