利用規約・プライバシーポリシーを追加

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#developers">Developers</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="#terms-privacy-policy">Terms/Privacy-Policy</a></li>
       </ul>
     </div>
     <button class="menu-toggle" id="menuToggle">&equiv;</button>
@@ -106,6 +107,51 @@
       </section>
 
       <div class="section-border"></div>
+
+      <section id="terms-privacy-policy">
+        <h2>Terms</h2>
+        <div id="t" class="t-pp">
+          <p>
+            Oto Home(以下、「グループ」)のサービスのすべての利用者(以下、「ユーザー」)は、以下の要項を遵守する必要があります。<br>
+            負荷をかける、バグや脆弱性を悪用するなどの不適切な利用をしてはいけません。<br>
+            バグや脆弱性を見つけた際には、<a
+              href="https://dsc.gg/otohome"
+              target="_blank"
+            >Discord Server</a>もしくは<a
+              href="https://github.com/otoneko1102"
+              target="_blank"
+            >GitHub</a>で報告することが求められます。
+          </p>
+        </div>
+        <h2>Privacy-Policy</h2>
+        <div id="pp" class="t-pp">
+          <p>
+            Oto Home(以下、「グループ」)は、以下の要項を遵守します。 <br>
+            グループが作成したすべてのDiscord BOTは、<a
+              href="https://support-dev.discord.com/hc/ja/articles/8562894815383-Discord%E9%96%8B%E7%99%BA%E8%80%85%E5%90%91%E3%81%91%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E5%88%A9%E7%94%A8%E8%A6%8F%E7%B4%84"
+              target="_blank"
+            >Discord開発者向けサービス利用規約</a>及び<a
+              href="https://support-dev.discord.com/hc/ja/articles/8563934450327-Discord%E9%96%8B%E7%99%BA%E8%80%85%E3%83%9D%E3%83%AA%E3%82%B7%E3%83%BC"
+              target="_blank"
+            >Discord開発者ポリシー</a>に則った運用・開発を行います。必要のない場合での情報収集、Discord及びその他の関係サイトの規約に反する情報収集は行いません。<br>
+            グループが作成したすべてのChrome拡張機能は、<a
+              href="https://policies.google.com/terms?hl=ja"
+              target="_blank"
+            >Google 利用規約 – ポリシーと規約</a>及び<a
+              href="https://developer.chrome.com/docs/webstore/program-policies"
+              target="_blank"
+            >Chrome ウェブストアのデベロッパー プログラム ポリシー</a>に則った運用・開発を行います。必要のない場合での情報収集、Google及びその他の関係サイトの規約に反する情報収集は行いません。
+          </p>
+        </div>
+        <div class="t-pp">
+          <p>
+            最終更新: 2024/12/02
+          </p>
+        </div>
+      </section>
+
+      <div class="section-border"></div>
+
     </div>
 
     <div class="social-links">
