画像パスを修正

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <img src="img/svg/discord_w.svg" alt="Discord" title="Discord" />
       </a>
       <a href="https://twitter.com/rin_pineapple" target="_blank">
-        <img src="img/svg/twiiter_w.svg" alt="Twitter" title="Twitter" />
+        <img src="img/svg/twitter_w.svg" alt="Twitter" title="Twitter" />
       </a>
       <a href="https://instagram.com/otoneko1102" target="_blank">
         <img src="img/svg/instagram_w.svg" alt="Instagram" title="Instagram" />
