--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2024 otoneko. All rights reserved. | Oto Home</p>
+      <p>&copy; 2022 - !!FULL_YEAR!! otoneko. All rights reserved. | Oto Home</p>
     </footer> 
 
     <script src="script.js"></script>
